--- a/deployments/AWS_EKS/1. Create_EKS_EFS.md
+++ b/deployments/AWS_EKS/1. Create_EKS_EFS.md
@@ -56,9 +56,9 @@ apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 
 metadata:
-  name: wenhant-eks-cluster
+  name: <CLUSTER_NAME>
   version: "1.32"
-  region: us-west-2
+  region: <REGION_NAME>
 
 iam:
   withOIDC: true
@@ -109,7 +109,7 @@ eksctl create cluster -f eks_cluster_config.yaml
 
 ## 3. Create an EFS file system
 
-To enable multiple pods deployed to multiple nodes to load shards of the same model so that they can used in coordination to serve inference request too large to loaded by a single GPU, we'll need a common, shared storage location. In Kubernetes, these common, shared storage locations are referred to as persistent volumes. Persistent volumes can be volume mapped in to any number of pods and then accessed by processes running inside of said pods as if they were part of the pod's file system. We will be using EFS as persistent volume.
+We'll need a common, shared storage location to enable pods deployed to multiple nodes to load shards of the same model. This way, they can be used in coordination to serve inference requests for models too large to loaded by GPUs on a single node. In Kubernetes, these common, shared storage locations are referred to as persistent volumes. Persistent volumes can be volume mapped in to any number of pods and then accessed by processes running inside of said pods as if they were part of the pod's file system. We will be using EFS as persistent volume.
 
 Additionally, we will need to create a persistent-volume claim which can use to assign the persistent volume to a pod.
 ### a. Create an IAM role
@@ -129,6 +129,8 @@ Follow the steps to create an EFS file system: https://github.com/kubernetes-sig
 Follow the steps to check if your EFS file system is working properly with your nodes: https://github.com/kubernetes-sigs/aws-efs-csi-driver/tree/master/examples/kubernetes/multiple_pods. This test is going to mount your EFS file system on all of your available nodes and write a text file to the file system.
 
 ## 5. Create StorageClass
+
+You can find your `fileSystemId` from AWS EFS. It usually start with `fs-`.
 
 ```
 kind: StorageClass
