--- a/deployments/AWS_EKS/2. Deploy_Dynamo_Cloud.md
+++ b/deployments/AWS_EKS/2. Deploy_Dynamo_Cloud.md
@@ -23,7 +23,7 @@ aws ecr create-repository --repository-name dynamo-operator
 
 Build and push images
 
-Change image build engine from `buildkit` to `kaniko` like below
+Change image build engine from `buildkit` to `kaniko` like below. We're seeing some issues currently with the default build engine `buildkit` and `kaniko` works OOTB.
 
 ```
 # imageBuildEngine: kaniko
@@ -33,11 +33,11 @@ vim https://github.com/ai-dynamo/dynamo/blob/main/deploy/cloud/helm/dynamo-platf
 Log into your docker registry
 
 ```
-export DOCKER_SERVER=354625738399.dkr.ecr.us-west-2.amazonaws.com
+export DOCKER_SERVER=<ECR_REGISTRY>
 export IMAGE_TAG=0.3.0
 
 aws configure
-aws ecr get-login-password | docker login --username AWS --password-stdin 354625738399.dkr.ecr.us-west-2.amazonaws.com/
+aws ecr get-login-password | docker login --username AWS --password-stdin <ECR_REGISTRY>/
 ```
 
 Push images
@@ -52,7 +52,7 @@ Export environment variables for creating a secret
 
 ```
 export DOCKER_USERNAME=AWS
-export DOCKER_PASSWORD="$(aws ecr get-login-password --region us-west-2)"
+export DOCKER_PASSWORD="$(aws ecr get-login-password --region <REGION_NAME>)"
 ```
 
 Create namespace
