--- a/deployments/AWS_EKS/3. Deploy_LLM_Example.md
+++ b/deployments/AWS_EKS/3. Deploy_LLM_Example.md
@@ -12,17 +12,17 @@ Create an ECR repository
 
 ```
 aws configure
-aws ecr create-repository --repository-name wenhant_dynamo_test
+aws ecr create-repository --repository-name <ECR_REPOSITORY>
 ```
 
 Push image
 
 ```
-docker tag dynamo:latest-vllm 354625738399.dkr.ecr.us-west-2.amazonaws.com/wenhant_dynamo_test:0.3.0
+docker tag dynamo:latest-vllm <ECR_REGISTRY>/<ECR_REPOSITORY>:0.3.0
 
-aws ecr get-login-password | docker login --username AWS --password-stdin 354625738399.dkr.ecr.us-west-2.amazonaws.com/
+aws ecr get-login-password | docker login --username AWS --password-stdin <ECR_REGISTRY>/
 
-docker push 354625738399.dkr.ecr.us-west-2.amazonaws.com/wenhant_dynamo_test:0.3.0
+docker push <ECR_REGISTRY>/<ECR_REPOSITORY>:0.3.0
 ```
 
 ## 2. Deploy the Helm Chart for Inference Graph
@@ -37,7 +37,7 @@ Export necessary environment variables
 
 ```
 export DYNAMO_CLOUD=http://localhost:8080
-export DYNAMO_IMAGE=354625738399.dkr.ecr.us-west-2.amazonaws.com/wenhant_dynamo_test:0.3.0
+export DYNAMO_IMAGE=<ECR_REGISTRY>/<ECR_REPOSITORY>:0.3.0
 export DEPLOYMENT_NAME=llm-disagg-router
 ```
 
@@ -51,7 +51,7 @@ DYNAMO_TAG=$(dynamo build graphs.disagg_router:Frontend | grep "Successfully bui
 You should output something similar to below
 
 ```
-(venv) ubuntu@ip-192-168-83-157:~/dynamo/examples/llm$ DYNAMO_TAG=$(dynamo build graphs.disagg_router:Frontend | grep "Successfully built" | awk '{ print $NF }' | sed 's/\.\.$//')
+DYNAMO_TAG=$(dynamo build graphs.disagg_router:Frontend | grep "Successfully built" | awk '{ print $NF }' | sed 's/\.\.$//')
 2025-05-06T01:05:55.346Z  WARN  __init__.vllm_version_matches_substr: Using ai_dynamo_vllm
 2025-05-06T01:05:55.348Z  INFO  __init__.resolve_current_platform_cls_qualname: No platform detected, vLLM is running on UnspecifiedPlatform
 2025-05-06T01:05:55.581Z  INFO  nixl: NIXL is available
@@ -100,7 +100,7 @@ llm-disagg-router-vllmworker-7bbf7f7f77-ks9ff                        1/1     Run
 
 ## 3. Send a request
 
-Open port access to frontend pod
+Open port access to frontend pod. You can find the frontend pod name from the output of `kubectl get pods`
 
 ```
 kubectl port-forward pod/llm-disagg-router-frontend-785998d847-n2q8t 3000:3000
